--- a/src/App.css
+++ b/src/App.css
@@ -21,4 +21,35 @@
   display: block;
   white-space: pre-wrap;
   text-align: left;
+  border: #6372ff50 1px solid;
+  border-top: none;
+  padding: 20px;
+}
+
+/*make animation that will drop down content*/
+@keyframes slideDown {
+  0% {
+    max-height: 0;
+    opacity: 0;
+  }
+  100% {
+    max-height: 100%;
+    opacity: 1;
+  }
+}
+
+.collapsible {
+  background-color: #6372ff50;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.align-right {
+  text-align: right;
 }
