--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,10 @@
   white-space: pre-wrap;
   text-align: left;
   border: #6372ff50 1px solid;
+  margin-bottom: 20px;
   border-top: none;
   padding: 20px;
+  border-radius: 0 0 4px 4px;
 }
 
 /*make animation that will drop down content*/
@@ -48,6 +50,8 @@
   text-align: left;
   outline: none;
   font-size: 15px;
+  /*have to the op corners be with a borde radius*/
+  border-radius: 4px 4px 0 0;
 }
 
 .align-right {
