--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,15 @@
 .align-right {
   text-align: right;
 }
+
+.fileitem {
+  border: 1px solid #bbb;
+  padding: 10px;
+  margin: 20px;
+  border-radius: 4px;
+  column-count: 2;
+}
+
+.fileitem:hover {
+  background-color: #6372ff50;
+}
