--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,32 @@
   column-count: 2;
 }
 
-.fileitem:hover {
+.fileitem_direct_child {
+  padding: 0.2rem;
+  border-radius: 4px;
+}
+
+.fileitem_direct_child:hover {
   background-color: #6372ff50;
+}
+
+.react-icons {
+  margin: 1.6rem;
+  font-size: 4rem;
+  color : #6372ff;
+}
+
+.react-icons:hover {
+  color: black;
+  animation: iconGrow 0.3s ease-in-out forwards ; /*make the icon stay growsn */
+}
+
+/*animation to make the icons bigger when hovered*/
+@keyframes iconGrow {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
 }
