--- a/public/css/style.css
+++ b/public/css/style.css
@@ -239,11 +239,11 @@ header .intro-text {
   padding-bottom: 200px;
   text-align: center;
 }
-/* Features Section */
-#features {
+/* spaces Section */
+#spaces {
   background: #f6f6f6;
 }
-#features i.fa {
+#spaces i.fa {
   font-size: 38px;
   margin-bottom: 20px;
   transition: all 0.5s;
@@ -302,19 +302,19 @@ header .intro-text {
   line-height: 24px;
   margin: 30px 0;
 }
-/* Services Section */
-#services {
+/* crates Section */
+#crates {
   padding: 100px 0;
   background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
   color: #fff;
 }
-#services .service-desc {
+#crates .crate-desc {
   margin: 10px 10px 20px;
 }
-#services h2 {
+#crates h2 {
   color: #fff;
 }
-#services .section-title h2::after {
+#crates .section-title h2::after {
   position: absolute;
   content: "";
   background: rgba(255, 255, 255, 0.3);
@@ -324,7 +324,7 @@ header .intro-text {
   margin-left: -30px;
   left: 50%;
 }
-#services i.fa {
+#crates i.fa {
   font-size: 42px;
   width: 120px;
   height: 120px;
@@ -334,15 +334,15 @@ header .intro-text {
   color: #fff;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
-#services h3 {
+#crates h3 {
   font-weight: 500;
   padding: 5px 0;
   color: #fff;
 }
-#services p {
+#crates p {
   color: rgba(255, 255, 255, 0.75);
 }
-#services .service-desc {
+#crates .crate-desc {
   margin-bottom: 40px;
 }
 /* Portfolio Section */
