--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 @media screen and (max-width: 400px) {
-  #features {
+  #spaces {
     padding: 20px;
     width: 111%;
   }
   #about,
-  #services,
+  #crates,
   #testimonials,
   #team,
   #contact,
