deleted the need and support for pictures with the publications

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -394,7 +394,7 @@ header .intro-text {
 .hover-bg:hover .hover-text {
   opacity: 1;
 }
-/* publicationss Section */
+/* publications Section */
 #publications {
   padding: 100px 0;
   background: #f6f6f6;
